force-app/main/default/objects/Translations__mdt/Translations__mdt.object-meta.xml
<CustomObject>
    <label>Translations</label>
    <pluralLabel>Translations</pluralLabel>
</CustomObject>