force-app/main/default/objects/Translations__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Translated language</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
                <default>true</default>
                <label>EN</label>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>