force-app/main/default/objects/Translations__mdt/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <referenceTo>Position__mdt</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>