force-app/main/default/objects/Translations__mdt/fields/PositionFieldValue__c.field-meta.xml
<CustomField>
    <fullName>PositionFieldValue__c</fullName>
    <label>Position Field Value</label>
    <referenceTo>PositionFieldValues__mdt</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>