force-app/main/default/objects/Translations__mdt/fields/TranslatedValue__c.field-meta.xml
<CustomField>
    <fullName>TranslatedValue__c</fullName>
    <label>Translated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>