force-app/main/default/objects/Translations__mdt/fields/TranslationNumber__c.field-meta.xml
<CustomField>
    <fullName>TranslationNumber__c</fullName>
    <label>Translation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>